CSS/style.css
@font-face {
  font-family: "Georgia Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Georgia Regular"), url("georgia.woff") format("woff");
}

@font-face {
  font-family: "Arial Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Arial Regular"), url("ARIAL.woff") format("woff");
}

/* Root styles */

:root {
  /* colours */
  --white: #fff;
  --black: #000;
  --green: #1deb63;
  --yellow: #f4f900;
  --orange: #ff8652;
  --dark-blue: #01134b;
  --light-green: hsla(140, 84%, 52%, 0.6);
  --light-white: hsla(0, 0%, 100%, 0.6);

  /* Border */
  --main-radius: 10px;
  --button-radius: 30px;

  /* shadows */
  --button-shadow: rgba(0, 0, 0, 0.5) 2px 3px 4px;
  --heading-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px;
  --letter-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
  --circle-shadow: hsl(0, 0, 0, 0.5) 1px 2px 4px;

  /* transitions */
  --main-transition: all ease-in-out 0.3s;

  /* Letter spacing */
  --small_letter_space: 1px;
  --big_letter_space: 2px;
}

/* General styles Mobile*/

* {
  text-transform: capitalize;
  list-style: none;
  text-decoration: none;
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3 {
  font-family: "georgia regular", "times new roman", serif;
}

h1 {
  letter-spacing: var(--big_letter_space);
  font-size: 1.75rem;
  text-align: center;
}

h2 {
  letter-spacing: var(--small_letter_space);
  font-size: 1.5rem;
}

h3 {
  font-size: 1.25rem;
  font-weight: normal;
  letter-spacing: var(--small_letter_space);
}

p,
a {
  font-family: "arial", "tahoma", "sans-serif";
  font-size: 1rem;
  letter-spacing: var(--small_letter_space);
}

p {
  text-transform: none;
}

/* -------------- Mobile version ------------ */

/* Not visible Mobile*/
.desk_header {
  display: none;
}

/* header Mobile */
header {
  background-color: var(--dark-blue);
}

.header_container {
  margin-inline: auto;
  padding-inline: 30px;
  max-width: 650px;
}

.mob_header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 7.5em;
}

.mob_logo {
  max-width: 181px;
  max-height: 90px;
}

.mob_logo_link img {
  width: 181px;
  height: 90px;
}

.mob_nav_cont {
  display: flex;
}

.hamburger_label {
  width: 25px;
  height: 25px;
  cursor: pointer;
}

.hamburger_icon {
  color: var(--white);
  font-size: 25px;
  width: 25px;
  text-align: center;
}

.mob_nav {
  position: absolute;
  top: 120px;
  left: 0;
  right: 0;
  text-align: center;
  align-content: center;
  background-color: var(--dark-blue);
  /* transition */
  display: block;
  opacity: 0;
  max-height: 0px;
  z-index: -99;
  transition: var(--main-transition);
}

.mob_nav ul {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-block: 1rem;
}

.mob_nav ul li {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;
  height: 38px;
  width: 100%;
}

.mob_nav ul li a {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Georgia";
  color: var(--white);
  font-size: var(--text_mob);
  font-weight: bold;
  letter-spacing: var(--small_letter_space);
  height: 100%;
  width: 100%;
}

.mob_nav ul li a:active {
  background-color: var(--green);
  color: var(--black);
}

.mob_nav .nav_colour_btn {
  color: black;
  background-color: var(--yellow);
}

.nav_container #mob_nav:checked ~ .mob_nav {
  display: block;
  /* transition */
  opacity: 1;
  z-index: 99;
  max-height: 100%;
  transition: var(--main-transition);
}

/* main */

.background_img {
  background-image: url(../images/milad-fakurian-PGdW_bHDbpI-unsplash\ -\ compressed.jpg);
  background-color: #9395ed; /*backup*/
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  width: 100%;
  /* IOS */
  webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}

/* Footer Mobile*/

footer {
  background-color: var(--dark-blue);
}

.footer_container {
  max-width: 650px;
  margin-inline: auto;
  color: var(--white);
  padding-block: 2em;
  padding-inline: 30px;
}

.footer_info_container {
  display: flex;
  flex-direction: column;
  gap: 50px;
}

.mob_footer_info_divs {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.footer_first_div_info {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.footer_second_div_info {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.footer_second_div_info a {
  color: var(--white);
  text-decoration: underline;
}

.footer_second_div_info a:active,
.footer_second_div_info a:hover {
  color: var(--green);
}

.mob_location_headline {
  color: var(--orange);
}

.mob_contact_headline {
  color: var(--yellow);
}

.mob_hour_headline {
  color: var(--green);
}

.mob_footer_icon {
  padding-right: 10px;
  font-size: 25px;
}

.mob_horizontal_line {
  border: 1px thin white;
  opacity: 0.7;
}

.social_media_container {
  display: flex;
  gap: 20px;
}

.footer_media_icons {
  font-size: 2rem;
  cursor: pointer;
}

.footer_media_icons:active,
.footer_media_icons:hover {
  color: var(--green);
}

.hour_flex {
  display: flex;
  justify-content: space-between;
}

.mob_footer_line {
  padding-block: 50px;
}

.footer_nav {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: fit-content;
}

.footer_nav a {
  color: var(--white);
  text-decoration: underline;
}

.footer_nav a:hover,
.footer_nav a:active {
  color: var(--green);
}

.footer_bottom_container {
  display: flex;
  flex-direction: column;
  justify-content: right;
  gap: 2em;
  padding-top: 2em;
}

.to_top_horizontal_container {
  display: flex;
  justify-content: right;
}

.to_top {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  gap: 5px;
  width: fit-content;
  cursor: pointer;
  color: var(--white);
  text-shadow: var(--button-shadow);
}

.to_top p {
  font-size: 0.75rem;
  text-shadow: var(--letter-shadow);
}

.to_top:active,
.to_top:hover {
  color: var(--green);
}

.arrow_up {
  font-size: 35px;
}

.copyright_container {
  display: flex;
  flex-direction: column;
  gap: 2em;
}

.copyright_copy {
  font-size: 10px;
  opacity: 0.7;
  text-align: center;
}

/* ----------- Index Mobile Page ---------- */

.main_margin {
  max-width: 650px;
  padding-top: 2em;
  margin-inline: auto;
  /* padding-inline: 30px; */
}

.main_img {
  box-sizing: border-box;
  max-height: 205px;
}

.main_img img {
  max-height: 205px;
  width: 100%;
  object-fit: cover;
}

.img_explore img {
  min-height: 205px;
}

.index_h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--green);
  height: 53px;
  text-shadow: var(--letter-shadow);
}

.cards_flex {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 3em;
  /* padding-bottom: 3em; */
  padding-bottom: 4em;
}

.card_container {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  gap: 2em;
  background-color: #fff;
  box-shadow: var(--button-shadow);
  border-radius: var(--main-radius);
  padding-top: 3em;
  padding-inline: 30px;
  max-width: 280px;
}

.h2_btm_padding {
  padding-bottom: 1em;
}

.h2_headline {
  border-bottom: 1px solid var(--black);
  width: fit-content;
}

.card_img_1 {
  max-width: 100%;
  background-size: cover;
  border-radius: var(--main-radius);
}

#gmp-map {
  max-width: 100%;
  height: 250px;
  border-radius: var(--main-radius);
}

.map_address_link {
  font-size: 14px;
}

.button_container {
  display: flex;
  justify-content: center;
  position: relative;
  bottom: -20px;
}

.card_button {
  color: var(--black);
  padding-block: 10px;
  padding-inline: 20px;
  background-color: var(--orange);
  border-radius: var(--button-radius);
  box-shadow: var(--button-shadow);
  font-size: 1.25rem;
  font-weight: bold;
  text-align: center;
}

.card_button:hover,
.card_button:active {
  background-color: var(--green);
}

.green_background {
  background-color: var(--light-green);
}

.white_background {
  background-color: var(--light-white);
}

.black_icons {
  color: var(--black);
}

.black_icons:hover,
.black_icons:active {
  color: var(--black);
  scale: 1.02;
}

.card_small_gap_container {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.card_small_gap_container a {
  color: var(--black);
  text-decoration: underline;
}

.card_small_gap_container a:hover,
.card_small_gap_container a:active {
  color: var(--black);
  opacity: 0.7;
}

/* Explore mobile page */

.card_img_2 {
  max-height: 120px;
  max-width: 160px;
  background-size: cover;
  border-radius: var(--main-radius);
}

.card_inside_flex_horizontal {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.text_right {
  text-align: right;
}

